--- a/app/quiz/page.module.css
+++ b/app/quiz/page.module.css
@@ -6,4 +6,66 @@
     padding: 6rem;
     min-height: 100vh;
   }
+
+  .h1{
+    font-size: 40px;
+    margin-bottom: 50px;
+  }
+
+
+ .card{
+  display: flex;
+  flex-direction: column;
+  border: 2px solid gray;
+  padding: 20px;
+  width: 500px;
+  height: 500px;
+  border-radius: 30px;
+ }
+ 
+
+ 
+ .cardTitle{
+  font-size: 20px;
+  margin-bottom: 20px;
+ }  
+
+ .question{
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+ }
+
+ .ul{
+  margin-top: 30px;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+
+ }
+
+ .li{
+  border: 2px solid rgb(112, 112, 112);
+  border-radius: 15px;
+  height: 50px;
+  align-items: center;
+  padding: 12px;
+  display: flex;
   
+  
+ }
+
+ .li:hover{
+  border: 2px solid rgb(201, 201, 201);
+  cursor: pointer;
+ }
+
+
+
+ .qNumber{
+  top: 8px;
+  font-size: 0.75rem;
+ }
+
+
