--- a/app/quiz/page.module.css
+++ b/app/quiz/page.module.css
@@ -68,6 +68,38 @@
   font-weight: 800;
  }
 
+ .end{
+  display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+ }
+
+ .nextButton{
+  border: 2px solid rgb(27, 27, 44);
+  background-color: rgb(20, 20, 20);
+  width: 120px;
+  height: 40px;
+  border-radius: 8px;
+ }
+
+ .nextDisabled{
+  cursor: not-allowed;
+  color: rgb(44, 44, 44);
+  border: 2px solid rgb(21, 21, 21);
+ }
+ 
+
+ .nextButton:hover{
+  background-color: rgb(181, 181, 181);
+  color: rgb(27, 27, 27);
+ }
+ .nextButton:hover:not([disabled]) {
+  color: rgb(25, 25, 25);
+  border: 2px solid rgb(21, 21, 21);
+}
+
 
 
  .qNumber{
