--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 .main {
   display: flex;
   flex-direction: column;
@@ -5,6 +7,7 @@
   align-items: center;
   padding: 6rem;
   min-height: 100vh;
+  background-color: #000000;
 }
 
 .container{
@@ -15,8 +18,15 @@
 
 }
 
+.h1{
+  font-family: poppins;
+  font-size: 2rem;
+  color: rgba(255, 98, 0, 0.716);
+  text-align: center;
+}
+
 .button{
-  border: 2px solid rgb(49, 59, 47);
+  border: 2px solid rgb(87, 87, 87);
   background-color: black;
   border-radius: 20px;
   color: white;
@@ -25,36 +35,25 @@
   height: 50px;
   width: 160px;
   font-size: 1rem;
+  font-family: poppins;
 }
 
 .button:hover{
-  border: 2px solid rgb(106, 105, 105)
+  border: 2px solid rgb(162, 162, 162);
+  background-color: black;
 }
 
 
 
 /* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
+@media (max-width: 768px) {
+  .h1{
+    font-size: 1.2rem;
   }
+
+  .button{
+    height: 60px;
+  width: 90px;
+  font-size: 0.7rem;
 }
-
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
-
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
-}
-
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
 }
